# the-core-cpp

./: BasicMessageProcessor.cpp  BasicMessageProcessor.h  CMakeLists.txt  ClientMonitor.cpp  CoreMessageProcessor.h  CoreSession.cpp  CoreSession.h  CoreStart.cpp  CoreTest.cpp  README.md  ServiceMonitor.cpp  SessionManager.cpp  SessionTest.cpp  TestClient.cpp  TestServer.cpp  Version.h
config/: thecore-queue-config
messaging/: CMakeLists.txt  CoreMessage.cpp  CoreMessage.h  CoreMessageSerializer.cpp  CoreMessageSerializer.h  MessageTest.cpp  Messaging.cpp  Messaging.h
pugixml/: CMakeLists.txt  pugixml.hpp
sdk/: Mobile Platform Developers Guide.doc  README
sdk/Centos/TheCore/: CMakeLists.txt  TestClient.cpp  TestServer.cpp
sdk/Centos/TheCore/config/: thecore-queue-config
sdk/Centos/TheCore/messaging/: CMakeLists.txt  CoreMessage.cpp  CoreMessage.h  Messaging.cpp  Messaging.h
sdk/Centos/TheCore/pugixml/: CMakeLists.txt  pugixml.cpp  pugixml.hpp  pugixpath.cpp
sdk/Windows/: Install.msi  ReadMe.doc
